--- a/details.html
+++ b/details.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Isaac Nunez">
     <meta name="description" content="Social Media">
     <meta name="keywords" content="html, css, javascript">
-    <title>Details</title>
+    <title>Product Details</title>
     <link rel="icon" href="./assets/img/Original Logo Symbol.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,4 +16,38 @@
     <link rel="stylesheet" href="./assets/css/style.css" media="all">
     <script src="./assets/js/script.js" defer></script>
   </head>
+  <body>
+    <header>
+      <div class="logo">Cozy Cocina</div>
+      <button class="login-btn">Login</button>
+    </header>
+  
+    <div class="modal hidden">
+      <div class="modal-content">
+        <span class="modal-close">&times;</span>
+        <h2>Login</h2>
+        <form>
+          <input type="text" placeholder="Username" required>
+          <input type="password" placeholder="Password" required>
+          <button type="submit">Login</button>
+        </form>
+      </div>
+    </div>
+  
+    <main>
+      <section class="product-detail">
+        <img src="toaster-large.jpg" alt="Deluxe Toaster">
+        <h1>Deluxe Toaster</h1>
+        <p>Price: $49.99</p>
+        <p>
+          This deluxe toaster comes with four slots, multiple settings, and a 
+          sleek design perfect for any kitchen.
+        </p>
+      </section>
+    </main>
+  
+    <footer>
+      <p>&copy; 2024 Cozy Cocina. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
