--- a/index.html
+++ b/index.html
@@ -17,11 +17,20 @@
     <script src="./assets/js/script.js" defer></script>
   </head>
   <body>
-    <header>
-      <div class="logo">Cozy Cocina</div>
-      <button class="login-btn">Login</button>
-    </header>
-  
+  <div class="container">
+    <header class="header">
+		<a href="index.html" class="logo"><img src="./assets/img/Original Logo Symbol.png" width="50px"><span>Cozy Cocina</span></a>
+        <button class="login-btn">Login</button>
+	</header>
+
+	  <section class="banner">
+		<div class="inner">
+		  <div class="banner-header">
+			<h1>Cozy Cocina</h1>
+          </div>
+	    </div>
+	  </section>
+
     <div class="modal hidden">
       <div class="modal-content">
         <span class="modal-close">&times;</span>
@@ -34,12 +43,7 @@
       </div>
     </div>
   
-    <main>
-      <section class="hero">
-        <h1>Welcome to Cozy Cocina</h1>
-        <p>Your one-stop shop for premium kitchen appliances.</p>
-      </section>
-  
+<!--
       <section class="products">
         <h2>Our Products</h2>
         <div class="product-list">
@@ -53,7 +57,7 @@
             <img src="mixer.jpg" alt="Mixer">
             <h3>Stand Mixer</h3>
             <p>$199.99</p>
-            <a href="detail.html">View Details</a>
+            <a href="">View Details</a>
           </div>
         </div>
       </section>
@@ -74,10 +78,10 @@
           <p class="form-message"></p>
         </form>
       </section>
-    </main>
-  
+    -->
     <footer>
       <p>&copy; 2024 Cozy Cocina. All rights reserved.</p>
     </footer>
+  </div>
   </body>
 </html>
