--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
   <body>
   <div class="container">
     <header class="header">
-		<a href="index.html" class="logo"><img src="./assets/img/Original Logo Symbol.png" width="50px"><span>Cozy Cocina</span></a>
-        <button class="login-btn">Login</button>
+        <div class="logo">
+            <a href="index.html" ><img src="./assets/img/Original Logo Symbol.png" width="50px"></a>
+            <span>Cozy Cocina</span>
+        </div>
+        <button class="button">Login</button>
 	</header>
 
 	  <section class="banner">
@@ -42,8 +45,7 @@
         </form>
       </div>
     </div>
-  
-<!--
+
       <section class="products">
         <h2>Our Products</h2>
         <div class="product-list">
@@ -78,7 +80,7 @@
           <p class="form-message"></p>
         </form>
       </section>
-    -->
+
     <footer>
       <p>&copy; 2024 Cozy Cocina. All rights reserved.</p>
     </footer>
