--- a/details.html
+++ b/details.html
@@ -36,7 +36,7 @@
   
     <main>
       <section class="product-detail">
-        <img src="toaster-large.jpg" alt="Deluxe Toaster">
+        <img src="./assets/img/toaster.jpg" alt="Deluxe Toaster">
         <h1>Deluxe Toaster</h1>
         <p>Price: $49.99</p>
         <p>
