--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <form>
           <input type="text" placeholder="Username" required>
           <input type="password" placeholder="Password" required>
-          <button type="submit">Login</button>
         </form>
+        <button class="login" type="submit">Login</button>
       </div>
     </div>
 
@@ -50,14 +50,14 @@
         <h2>Our Products</h2>
         <div class="product-list">
           <div class="product">
-            <img src="toaster.jpg" alt="Toaster">
-            <h3>Deluxe Toaster</h3>
+            <a href="details.html"><img src="./assets/img/toaster.jpg" alt="Toaster"></a>
+            <a href="details.html"><h3>Deluxe Toaster</h3></a>
             <p>$49.99</p>
-            <a href="detail.html">View Details</a>
+            <a href="details.html">View Details</a>
           </div>
           <div class="product">
-            <img src="mixer.jpg" alt="Mixer">
-            <h3>Stand Mixer</h3>
+            <a href=""><img src="./assets/img/mixer.jpg" alt="Mixer"></a>
+            <a href=""><h3>Stand Mixer</h3></a>
             <p>$199.99</p>
             <a href="">View Details</a>
           </div>
@@ -68,13 +68,13 @@
         <h2>Contact Us</h2>
         <form class="contact-form">
           <label for="name">Name:</label>
-          <input type="text" id="name" name="name" required>
+          <input type="text" class="name" name="name" required>
   
           <label for="email">Email:</label>
-          <input type="email" id="email" name="email" required>
+          <input type="email" class="email" name="email" required>
   
           <label for="message">Message:</label>
-          <textarea id="message" name="message" required></textarea>
+          <textarea class="message" name="message" required></textarea>
   
           <button type="submit">Send</button>
           <p class="form-message"></p>
