--- a/details.html
+++ b/details.html
@@ -40,14 +40,14 @@
         <h1>Deluxe Toaster</h1>
         <p>Price: $49.99</p>
         <p>
-          This deluxe toaster comes with four slots, multiple settings, and a 
+          This deluxe toaster comes with two slots, multiple settings, and a 
           sleek design perfect for any kitchen.
         </p>
       </section>
     </main>
   
-    <footer>
-      <p>&copy; 2024 Cozy Cocina. All rights reserved.</p>
-    </footer>
   </body>
+  <footer>
+    <p>&copy; 2024 Cozy Cocina. All rights reserved.</p>
+  </footer>
 </html>
