--- a/index.html
+++ b/index.html
@@ -68,16 +68,16 @@
         <h2>Contact Us</h2>
         <form class="contact-form">
           <label for="name">Name:</label>
-          <input type="text" class="name" name="name" required>
+          <input type="text" id="name" class="name" name="name" required>
   
           <label for="email">Email:</label>
-          <input type="email" class="email" name="email" required>
+          <input type="email" id="email" class="email" name="email" required>
   
           <label for="message">Message:</label>
-          <textarea class="message" name="message" required></textarea>
+          <textarea id="message" class="message" name="message" required></textarea>
   
           <button type="submit">Send</button>
-          <p class="form-message"></p>
+          <p class="form-message">&nbsp;</p>
         </form>
       </section>
 
